Fix leak in OffscreenCanvasFrameDispatcherImpl

This change ensures that ReclaimResources always calls
ReclaimResourceInternal to avoid leaking resources in cases
where the canvas is not backed by an SkImage. It also simplifies
ReclaimResources by always waiting on the sync token.  There was
no measurable advantage in deferring the wait.

Bug: 735470
Change-Id: I810ec1d016d1f312d9b074aff7ab8c088b188705
Reviewed-on: https://chromium-review.googlesource.com/543436
Reviewed-by: Fernando Serboncini <fserb@chromium.org>
Commit-Queue: Justin Novosad <junov@chromium.org>
Cr-Commit-Position: refs/heads/master@{#481258}
Former-commit-id: 07708943258531dcacbd85b3fc54459989ca5bbd